freest/test/prog/valid/functional/SimpleVar/SimpleVar.fst
module SimpleVar where

id' : Int -> Int
id' x = x

main : Int
main = id' 23

