freest/test/prog/Invalid/scoping/MultipleDeclsPats/MultipleDeclsPats.fst
module MultipleDeclsPats where

foo : Int -> Int -> Int
foo x x = 5